--- a/HotelRoomBookingApplication/Views/AdminApp/NewCustomer.cshtml
+++ b/HotelRoomBookingApplication/Views/AdminApp/NewCustomer.cshtml
@@ -22,6 +22,7 @@
         .card-container.card {
             max-width: 500px;
             padding: 40px 40px;
+            opacity:0.7;
         }
 
         .btn {
@@ -37,7 +38,7 @@
         * Card component
         */
         .card {
-            background-color: #F7F7F7;
+            background-color: black;
             /* just in case there no content*/
             padding: 20px 25px 30px;
             margin: 0 auto 25px;
@@ -49,6 +50,7 @@
             -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            opacity: 0.7;
         }
 
         .profile-img-card {
@@ -118,6 +120,7 @@
         .btn.btn-signin {
             /*background-color: #4d90fe; */
             background-color: rgb(104, 145, 162);
+            
             /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
             padding: 0px;
             font-weight: 700;
@@ -139,15 +142,7 @@
                 background-color: rgb(12, 97, 33);
             }
 
-        /*.forgot-password {
-                   color: rgb(104, 145, 162);
-               }*/
-
-        /*.forgot-password:hover,
-                   .forgot-password:active,
-                   .forgot-password:focus {
-                       color: rgb(12, 97, 33);
-                   }*/
+        
     </style>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -174,28 +169,28 @@
 <body>
     <div class="container">
         <div class="card card-container">
-            <h1 style="text-align:center">SignUp</h1>
+            <h1 style="text-align:center; color:whitesmoke">SignUp</h1>
             <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
 
             <p id="profile-name" class="profile-name-card"></p>
             <form asp-action="NewCustomer" asp-controller="AdminApp" method="post" >
 
-                <span>CustomerName</span>
+                <span style="color:white">CustomerName</span>
                 <input asp-for="CustomerName" class="form-control" placeholder="Enter Name" required />
                 <br />
-                <span>CustomerContact</span>
+                <span style="color:white">CustomerContact</span>
                 <input asp-for="CustomerContact" class="form-control" placeholder="Enter contact" required />
                 <br />
-                <span>Email</span>
+                <span style="color:white">Email</span>
                 <input asp-for="Email" class="form-control" placeholder="Enter Email" id="email"  required/>
                 <br />
-                <span>City</span>
+                <span style="color:white">City</span>
                 <input asp-for="City" class="form-control" placeholder="Enter City" required />
                 <br />
-                <span>Password</span>
+                <span style="color:white">Password</span>
                 <input asp-for="Password" type="password" class="form-control" placeholder="Enter Password"   required />
                 <br />
-                <input type="submit" value="Add Customer" class="btn btn-primary" id="submitbutton"  />
+                <input type="submit" value="Add Customer" class="btn btn-lg btn-primary btn-block btn-signin" id="submitbutton"  />
             </form>
 
         </div><!-- /card-container -->
