--- a/HotelRoomBookingApplication/Views/Home/About.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/About.cshtml
@@ -1,7 +1,87 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<html>
+<head>
+    <style>
+       
+               body, html {
+                   height: 100%;
+                   background-repeat: no-repeat;
+                   background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+               }
+
+               .card-container.card {
+                   max-width: 1300px;
+                   padding: 40px 40px;
+                   opacity: 0.7;
+                   height:700px;
+               }
+
+               
+
+               /*
+        * Card component
+        */
+               .card {
+                   background-color: black;
+                   /* just in case there no content*/
+                   padding: 20px 25px 30px;
+                   margin: 0 auto 25px;
+                   margin-top: 50px;
+                   /* shadows and rounded borders */
+                   -moz-border-radius: 2px;
+                   -webkit-border-radius: 2px;
+                   border-radius: 2px;
+                   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   opacity: 0.7;
+               }
+
+              
+    </style>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="card card-container">
+
+            <br /><br /><br /><br />
+        <center>
+            <font style="font-family:Broadway;color:white; font-size:100px">@ViewData["Title"]</font>
+        </center>
+
+
+        <br /><br /><br /><br /><br /><br />
+        <strong style="color:white; text-align:justify">
+            <p>
+                Get set for the excursion you've dreamt of when you use Happy Live Inn to arrange a room at one of the lodging options in India. Regardless of what degree of perks you prefer to have available, our simple site makes it possible for you to find precisely what you are looking for.
+                Start hunting today, and you're guaranteed to find the perfect room for your trip.
+            </p>
+
+            <p>
+                Looking to spend the night at a high-end spa? We've got you covered.
+                We have got a massive variety of modest lodges too. And there are a variety of choices in between, too.
+                It's simply based on what you're in the mood for and how much you'd like to spend. As for location, you can select a room in any part of the area you'd like.
+                You'll find a range of accommodation choices right in the middle of the action, as well as hidden stays on the outskirts of India.
+                When you peruse our catalog of lodges in India, you're guaranteed to find cheap rates and shocking specials on any type of lodge around.
+            </p>
+
+            <p>
+                Reserving a place to stay for your holiday doesn't need to be excruciating.
+                Happy Live Inn can save you time and money when booking your stay at an accommodation in India, so you can spend your time making the most of your adventure and not stressing out about busting your budget.
+                So why wait another moment to book your travel plans? Enter your ideal travel dates now to view the best deals on stays in India!
+            </p>
+        </strong>
+
+
+        </div><!-- /card-container -->
+    </div><!-- /container -->
+</body>
+</html>
+
+
