--- a/HotelRoomBookingApplication/Views/Home/Index.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <br />
         <br />
     </div>
-  
+  <br/>
 
 
 
@@ -35,10 +35,11 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="~/images/fresh-hotel-executiveroom.jpg" style="height:600px; width:2000px" alt="ASP.NET" class="img-responsive" />
+                <img src="~/images/original_fu_54a725ab9b90b.jpg" style="height:600px; width:2000px" alt="Oops!!" class="img-responsive" />
 
                 <div class="carousel-caption" role="option">
 
@@ -47,7 +48,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="~/images/holiday-inn-hotel-and-suites-oakland-2533422671-4x3.jpg" style="height:600px; width:2000px" alt="Visual Studio" class="img-responsive" />
+                <img src="~/images/nobu-miami-beach-hotels-page_3.jpeg" style="height:600px; width:2000px" alt="Oops!!" class="img-responsive" />
 
                 <div class="carousel-caption" role="option">
 
@@ -56,11 +57,20 @@
                 </div>
             </div>
             <div class="item">
-                <img src="~/images/03ac5df68db3441893459f77c0b8743f.jpg" style="height:600px; width:2000px" alt="Microsoft Azure" class="img-responsive" />
+                <img src="~/images/03ac5df68db3441893459f77c0b8743f.jpg" style="height:600px; width:2000px" alt="Oops!!" class="img-responsive" />
 
                 <div class="carousel-caption" role="option">
 
-                    <h3>Connect with the second life here!</h3>
+                    <h3>Connect with the second life here!!</h3>
+
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/1666_hofh_00_p_2560x1440.jpg" style="height:600px; width:2000px" alt="Oops!!" class="img-responsive" />
+
+                <div class="carousel-caption" role="option">
+
+                    <h3>See what a difference a stay makes!!</h3>
 
                 </div>
             </div>
