--- a/HotelRoomBookingApplication/Views/PaymentApp/PlaceOrder.cshtml
+++ b/HotelRoomBookingApplication/Views/PaymentApp/PlaceOrder.cshtml
@@ -1,12 +1,239 @@
 ﻿@using HotelRoomBookingLibrary;
+@using HotelRoomBookingService.InvoiceInfo;
+
 @{
     ViewData["Title"] = "PlaceOrder";
-    int InvoiceNumber = (int)ViewData["InvoiceNumber"];
+    InvoiceData InvoiceInfo = (InvoiceData)ViewData["InvoiceInfo"];
     HotelSearchDetails info = (HotelSearchDetails)ViewData["userSearchInfo"];
     List<SelectedRoomsViewModel> list = (List<SelectedRoomsViewModel>)ViewData["selectedRooms"];
+    string payMode = (string)ViewData["payMode"];
+    int days = (int)ViewData["days"];
+
+    int total = 0;
+
 }
 
-<h2>PlaceOrder</h2>
+<html>
+<head>
+    <style>
+        /*
+        * Specific styles of signin component
+        */
+        /*
+        * General styles
+        */
+        body, html {
+            height: 100%;
+            background-repeat: no-repeat;
+            background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+        }
+
+        .card-container.card {
+            max-width: 2000px;
+            height: 700px;
+            padding: 40px 40px;
+        }
+
+        .btn {
+            font-weight: 700;
+            height: 36px;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            user-select: none;
+            cursor: default;
+        }
+
+        /*
+        * Card component
+        */
+        .card {
+            background-color: black;
+            /* just in case there no content*/
+            padding: 20px 25px 30px;
+            margin: 0 auto 25px;
+            margin-top: 50px;
+            /* shadows and rounded borders */
+            -moz-border-radius: 2px;
+            -webkit-border-radius: 2px;
+            border-radius: 2px;
+            -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+            opacity: 0.7;
+        }
+    </style>
+    
+
+    <style>
+
+
+        .invoice-title h2, .invoice-title h3 {
+            display: inline-block;
+        }
+
+        .table > tbody > tr > .no-line {
+            border-top: none;
+        }
+
+        .table > thead > tr > .no-line {
+            border-bottom: none;
+        }
+
+        .table > tbody > tr > .thick-line {
+            border-top: 2px solid;
+        }
+    </style>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="card card-container">
+
+            <!------ Include the above in your HEAD tag ---------->
+            <div class="container" style="width:900px">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="invoice-title">
+                            <h2 style="color:white">Invoice</h2><h3 style="color:white" class="pull-right">Invoice Number</h3><br />
+                            <h3 style="color:white" class="pull-right">@InvoiceInfo.InvoiceNo</h3>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <address style="color:white">
+                                    <strong style="color:white">Booked By</strong><br>
+                                    @InvoiceInfo.customer.CustomerName <br>
+                                    @InvoiceInfo.customer.CustomerContact <br>
+
+                                    @InvoiceInfo.customer.City <br>
+
+                                </address>
+                            </div>
+                          
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <address style="color:white">
+                                    <strong style="color:white">Payment Method:</strong><br>
+                                    @payMode<br>
+                                    @InvoiceInfo.customer.Email <br />
+                                </address>
+                            </div>
+                            <div class="col-xs-6 text-right">
+                                <address style="color:white">
+                                    <strong style="color:white">Order Date:</strong><br>
+                                    <script>
+                                        var date = new Date();
+                                        document.write(date.toDateString());
+                                    </script><br><br>
+                                </address>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><strong>Order summary</strong></h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table table-condensed">
+                                        <thead>
+                                            <tr>
+                                                <td><strong>Room Number</strong></td>
+                                                <td class="text-center"><strong>Room Price</strong></td>
+                                                <td class="text-center"><strong>Days</strong></td>
+                                                <td class="text-right"><strong>Total</strong></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <!-- foreach ($order->lineItems as $line) or some such thing here -->
+                                            @foreach (var i in list)
+                                            {
+                                                var sum = (int)@i.RoomPrice * @days;
+                                                total += sum;
+                                                <tr>
+                                                    <td>@i.RoomId</td>
+                                                    <td class="text-center">@i.RoomPrice</td>
+                                                    <td class="text-center">@days</td>
+                                                    <td class="text-right">@sum</td>
+
+                                                </tr>
+
+                                            }
+
+
+                                            <tr>
+                                                <td class="thick-line"></td>
+                                                <td class="thick-line"></td>
+                                                <td class="thick-line text-center"><strong>Subtotal</strong></td>
+                                                <td class="thick-line text-right">@total</td>
+                                            </tr>
+
+
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+        </div><!-- /card-container -->
+    </div><!-- /container -->
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<h2>PlaceOrder</h2>
 
 <style>
 
@@ -41,41 +268,37 @@
         <div class="col-xs-12">
             <div class="invoice-title">
                 <h2>Invoice</h2><h3 class="pull-right">Invoice Number</h3><br />
-                <h3 class="pull-right">@InvoiceNumber</h3>
+                <h3 class="pull-right">@InvoiceInfo.InvoiceNo</h3>
             </div>
             <hr>
             <div class="row">
                 <div class="col-xs-6">
                     <address>
                         <strong>Booked By</strong><br>
-                        <br>
-                        1234 Main<br>
-                        Apt. 4B<br>
-                        Springfield, ST 54321
+                        @InvoiceInfo.customer.CustomerName <br>
+                        @InvoiceInfo.customer.CustomerContact <br>
+
+                        @InvoiceInfo.customer.City <br>
+
                     </address>
                 </div>
-                <div class="col-xs-6 text-right">
-                    <address>
-                        <strong>Shipped To:</strong><br>
-                        Jane Smith<br>
-                        1234 Main<br>
-                        Apt. 4B<br>
-                        Springfield, ST 54321
-                    </address>
-                </div>
+               
             </div>
             <div class="row">
                 <div class="col-xs-6">
                     <address>
                         <strong>Payment Method:</strong><br>
-                        Visa ending **** 4242<br>
-                        jsmith@email.com
+                        @payMode<br>
+                        @InvoiceInfo.customer.Email <br />
                     </address>
                 </div>
                 <div class="col-xs-6 text-right">
                     <address>
                         <strong>Order Date:</strong><br>
-                        March 7, 2014<br><br>
+                        <script>
+                            var date = new Date();
+                            document.write(date.toDateString());
+                        </script><br><br>
                     </address>
                 </div>
             </div>
@@ -93,50 +316,38 @@
                         <table class="table table-condensed">
                             <thead>
                                 <tr>
-                                    <td><strong>Item</strong></td>
-                                    <td class="text-center"><strong>Price</strong></td>
-                                    <td class="text-center"><strong>Quantity</strong></td>
-                                    <td class="text-right"><strong>Totals</strong></td>
+                                    <td><strong>Room Number</strong></td>
+                                    <td class="text-center"><strong>Room Price</strong></td>
+                                    <td class="text-center"><strong>Days</strong></td>
+                                    <td class="text-right"><strong>Total</strong></td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <!-- foreach ($order->lineItems as $line) or some such thing here -->
-                                <tr>
-                                    <td>BS-200</td>
-                                    <td class="text-center">$10.99</td>
-                                    <td class="text-center">1</td>
-                                    <td class="text-right">$10.99</td>
-                                </tr>
-                                <tr>
-                                    <td>BS-400</td>
-                                    <td class="text-center">$20.00</td>
-                                    <td class="text-center">3</td>
-                                    <td class="text-right">$60.00</td>
-                                </tr>
-                                <tr>
-                                    <td>BS-1000</td>
-                                    <td class="text-center">$600.00</td>
-                                    <td class="text-center">1</td>
-                                    <td class="text-right">$600.00</td>
-                                </tr>
+                                @foreach (var i in list)
+                                {
+                                    var sum = (int)@i.RoomPrice * @days;
+                                    total += sum;
+                                    <tr>
+                                        <td>@i.RoomId</td>
+                                        <td class="text-center">@i.RoomPrice</td>
+                                        <td class="text-center">@days</td>
+                                        <td class="text-right">@sum</td>
+
+                                    </tr>
+
+                                }
+
+
                                 <tr>
                                     <td class="thick-line"></td>
                                     <td class="thick-line"></td>
                                     <td class="thick-line text-center"><strong>Subtotal</strong></td>
-                                    <td class="thick-line text-right">$670.99</td>
+                                    <td class="thick-line text-right">@total</td>
                                 </tr>
-                                <tr>
-                                    <td class="no-line"></td>
-                                    <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Shipping</strong></td>
-                                    <td class="no-line text-right">$15</td>
-                                </tr>
-                                <tr>
-                                    <td class="no-line"></td>
-                                    <td class="no-line"></td>
-                                    <td class="no-line text-center"><strong>Total</strong></td>
-                                    <td class="no-line text-right">$685.99</td>
-                                </tr>
+
+
+
                             </tbody>
                         </table>
                     </div>
@@ -144,5 +355,4 @@
             </div>
         </div>
     </div>
-</div>
-<input type="submit" name="name" value="submit" />
+</div>*@
