--- a/HotelRoomBookingApplication/Views/SearchApp/SelectedRooms.cshtml
+++ b/HotelRoomBookingApplication/Views/SearchApp/SelectedRooms.cshtml
@@ -42,7 +42,7 @@
         * Card component
         */
                .card {
-                   background-color: #F7F7F7;
+                   background-color: black;
                    /* just in case there no content*/
                    padding: 20px 25px 30px;
                    margin: 0 auto 25px;
@@ -54,105 +54,10 @@
                    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
                    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   opacity:0.7;
                }
 
-               .profile-img-card {
-                   width: 96px;
-                   height: 96px;
-                   margin: 0 auto 10px;
-                   display: block;
-                   -moz-border-radius: 50%;
-                   -webkit-border-radius: 50%;
-                   border-radius: 50%;
-               }
-
-               /*
-        * Form styles
-        */
-               .profile-name-card {
-                   font-size: 16px;
-                   font-weight: bold;
-                   text-align: center;
-                   margin: 10px 0 0;
-                   min-height: 1em;
-               }
-
-               .reauth-email {
-                   display: block;
-                   color: #404040;
-                   line-height: 2;
-                   margin-bottom: 10px;
-                   font-size: 14px;
-                   text-align: center;
-                   overflow: hidden;
-                   text-overflow: ellipsis;
-                   white-space: nowrap;
-                   -moz-box-sizing: border-box;
-                   -webkit-box-sizing: border-box;
-                   box-sizing: border-box;
-               }
-
-               .form-signin #inputEmail,
-               .form-signin #inputPassword {
-                   direction: ltr;
-                   height: 44px;
-                   font-size: 16px;
-               }
-
-               .form-signin input[type=email],
-               .form-signin input[type=password],
-               .form-signin input[type=text],
-               .form-signin button {
-                   width: 100%;
-                   display: block;
-                   margin-bottom: 10px;
-                   z-index: 1;
-                   position: relative;
-                   -moz-box-sizing: border-box;
-                   -webkit-box-sizing: border-box;
-                   box-sizing: border-box;
-               }
-
-               .form-signin .form-control:focus {
-                   border-color: rgb(104, 145, 162);
-                   outline: 0;
-                   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
-                   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
-               }
-
-               .btn.btn-signin {
-                   /*background-color: #4d90fe; */
-                   background-color: rgb(104, 145, 162);
-                   /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
-                   padding: 0px;
-                   font-weight: 700;
-                   font-size: 14px;
-                   height: 36px;
-                   -moz-border-radius: 3px;
-                   -webkit-border-radius: 3px;
-                   border-radius: 3px;
-                   border: none;
-                   -o-transition: all 0.218s;
-                   -moz-transition: all 0.218s;
-                   -webkit-transition: all 0.218s;
-                   transition: all 0.218s;
-               }
-
-                   .btn.btn-signin:hover,
-                   .btn.btn-signin:active,
-                   .btn.btn-signin:focus {
-                       background-color: rgb(12, 97, 33);
-                   }
-
-               .forgot-password {
-                   color: rgb(104, 145, 162);
-               }
-
-                   .forgot-password:hover,
-                   .forgot-password:active,
-                   .forgot-password:focus {
-                       color: rgb(12, 97, 33);
-                   }
+              
     </style>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -163,17 +68,17 @@
         <div class="card card-container">
 
 
-            <h2><center>FinalView</center></h2>
+         
 
             <style>
             .blank_row {
                 height: 10px !important; /* overwrites any other rules */
-                background-color: #FFFFFF;
+                background-color: black;
             }
         </style>
 
         <div>
-            <center><h1> <label>Summary</label></h1></center>
+            <center><h1> <label style="color:white">Summary</label></h1></center>
             <br /><br /><br /><br /><br />
 
             @*<tr>
@@ -183,21 +88,21 @@
 
             <table align="center" border="0">
             <tr>
-                <th>Hotel Name</th>
-                <td>@list[0].HotelName</td>
+                <th style="color:white">Hotel Name</th>
+                <td style="color:white">@list[0].HotelName</td>
             </tr>
             <tr>
-                <th width="200px">Hotel Contact</th>
-                <td>@list[0].HotelContact</td>
+                <th width="200px" style="color:white">Hotel Contact</th>
+                <td style="color:white">@list[0].HotelContact</td>
             </tr>
             <tr>
-                <th>Check In</th>
-                <td>@string.Format("{0:dd/MMM/yyyy}", list[0].CheckIn)</td>
+                <th style="color:white">Check In</th>
+                <td style="color:white">@string.Format("{0:dd/MMM/yyyy}", list[0].CheckIn)</td>
             </tr>
 
             <tr>
-                <th>Check Out</th>
-                <td>@string.Format("{0:dd/MMM/yyyy}", list[0].CheckOut)</td>
+                <th style="color:white">Check Out</th>
+                <td style="color:white">@string.Format("{0:dd/MMM/yyyy}", list[0].CheckOut)</td>
             </tr>
 
             @foreach (var i in list)
@@ -205,15 +110,15 @@
             {
 
                 <tr>
-                    <th>Room Number</th>
-                    <td>@i.RoomId</td>
+                    <th style="color:white">Room Number</th>
+                    <td style="color:white">@i.RoomId</td>
                 </tr>
 
 
 
 
-                <tr class="blank_row">
-                    <td colspan="3"></td>
+                <tr  class="blank_row">
+                    <td  colspan="3"></td>
                 </tr>
 
             }
@@ -221,7 +126,7 @@
         </table>
             <br /><br />
                   <center>
-                      <label>Total Amount @totalAmount</label>
+                      <label style="color:white">Total Amount @totalAmount</label>
                       <input type="hidden" value="@totalAmount" name="@totalAmount" />
                       <br /><br /><br />
                       <div>
